--- a/ar_pose/package.xml
+++ b/ar_pose/package.xml
@@ -28,6 +28,7 @@
   <build_depend>image_transport</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>visualization_msgs</run_depend>
@@ -38,4 +39,5 @@
   <run_depend>image_transport</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
 </package>
